Criado menu-bar e small-card

--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,6 +1,5 @@
 .container__big-card{
-    border: solid white 2px;
-    width: 600px;
+    width: 500px;
     height: 300px;
     display: flex;
     flex-direction: column; 
@@ -11,6 +10,7 @@
 }
 .title__big-card > h1{
     margin-top: 10px;
+    font-size: 20px;
 }
 .article__big-card > p{
     margin-top: 10px;
@@ -20,7 +20,7 @@
 .photo__big-card > img{
     width: 100%;
     
-    min-height: 200px;
+    min-height: 300px;
     margin: 5px;
     
 }
