--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,7 @@
-<p>menu-bar works!</p>
+<div class="menu-bar">
+    <ul>
+        <li><a href="https://www.linkedin.com/in/marciomsts">Linkedin</a></li>
+        <li><a href="https://github.com/marciomsts">GitHub</a></li>
+        <li><a href="https://www.instagram.com/marciomsts">Istagram</a></li>
+    </ul>
+</div>
