--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,20 @@
-<p>small-card works!</p>
+<div class="container_small-card">
+    <div class="content_small-card">
+        <div class="photo__small-card">
+            <img src="https://i.pinimg.com/564x/e6/9d/f8/e69df854960a495551a7c3067f7dbdf7.jpg" 
+            alt="" 
+            srcset="">
+
+        </div>
+    
+        <div class="description_small-card">
+            <h1>Últimas notícias</h1>
+    
+        </div>
+    </div>
+    
+    <div class="separator">
+        <hr>
+    </div> 
+
+</div>
