--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="container__menu-bar">
+    <app-menu-bar></app-menu-bar>
+</div>
 <app-menu-title></app-menu-title>
 <div class="articles">
     <div class="articles_main">
@@ -5,7 +8,9 @@
     </div>
 
     <div class="articles_others">
-
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
+        <app-small-card></app-small-card>
     </div>
     
 </div>
