--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,16 +1,16 @@
 <div class="container__big-card">
 
     <div class="photo__big-card">
-        <img src="https://i.ytimg.com/vi/JoVoVy7Yzgs/hqdefault.jpg" 
+        <img src="{{photoCover}}" 
         alt="" 
         srcset="">
     </div>
 
     <div class="title__big-card">
-        <h1>Novidades a caminho...Aguadem</h1>
+        <h1>{{cardTitle}}</h1>
     </div>
 
     <div class="article__big-card">
-        <p>Noticias de última hora, indicam mudanças em breve.</p>
+        <p>{{cardDescription}}</p>
     </div>
 </div>
