--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,14 +1,14 @@
 <div class="container_small-card">
     <div class="content_small-card">
         <div class="photo__small-card">
-            <img src="https://i.pinimg.com/564x/e6/9d/f8/e69df854960a495551a7c3067f7dbdf7.jpg" 
+            <img src="{{photoCover}}" 
             alt="" 
             srcset="">
 
         </div>
     
         <div class="description_small-card">
-            <h1>Últimas notícias</h1>
+            <h1><a href="#">{{titleDescription}}</a></h1>
     
         </div>
     </div>
